@@ -18,6 +18,7 @@
 package org.apache.solr.filestore;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.apache.solr.common.SolrException.ErrorCode.BAD_REQUEST;
 import static org.apache.solr.handler.admin.api.ReplicationAPIBase.FILE_STREAM;
 import static org.apache.solr.response.RawResponseWriter.CONTENT;
 
@@ -43,6 +44,7 @@ import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.StrUtils;
+import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.jersey.PermissionName;
@@ -207,6 +209,7 @@ public class ClusterFileStore extends JerseyResource implements ClusterFileStore
   }
 
   @SuppressWarnings("fallthrough")
+  @SuppressForbidden(reason = "singletonMap with null value is intentional")
   public static FileStoreDirectoryListingResponse getMetadata(
       FileStore.FileType type, String path, FileStore fileStore) {
     final var dirListingResponse = new FileStoreDirectoryListingResponse();
@@ -233,7 +236,7 @@ public class ClusterFileStore extends JerseyResource implements ClusterFileStore
             fileStore.list(path, null).stream()
                 .map(details -> convertToResponse(details))
                 .collect(Collectors.toList());
-        dirListingResponse.files = Collections.singletonMap(path, directoryContents);
+        dirListingResponse.files = Map.of(path, directoryContents);
         break;
     }
 
@@ -320,6 +323,19 @@ public class ClusterFileStore extends JerseyResource implements ClusterFileStore
     if (path == null) {
       path = "";
     }
+
+    // Ensure 'getFrom' points to a node in this cluster
+    final var zkStateReader = coreContainer.getZkController().getZkStateReader();
+    if (StrUtils.isNotBlank(getFrom)
+        && !getFrom.equals("*")
+        && !zkStateReader.isNodeLive(getFrom)) {
+      throw new SolrException(
+          BAD_REQUEST,
+          "File store cannot fetch from source node ["
+              + getFrom
+              + "] as it does not appear in live-nodes");
+    }
+
     pullFileFromNode(coreContainer, fileStore, path, getFrom);
     return response;
   }
