@@ -112,7 +112,6 @@ import org.apache.solr.util.SocketProxy;
 import org.apache.solr.util.TimeOut;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
-import org.junit.AfterClass;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.slf4j.Logger;
@@ -296,7 +295,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
               .getZkClient()
               .create(
                   ZkStateReader.CLUSTER_PROPS,
-                  Utils.toJSON(Collections.singletonMap(URL_SCHEME, HTTPS)),
+                  Utils.toJSON(Map.of(URL_SCHEME, HTTPS)),
                   CreateMode.PERSISTENT);
         } catch (KeeperException.NodeExistsException e) {
           ZkNodeProps props =
@@ -326,11 +325,6 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
   @BeforeClass
   public static void beforeClass() {
     System.setProperty("solrcloud.update.delay", "0");
-  }
-
-  @AfterClass
-  public static void afterClass() throws Exception {
-    System.clearProperty("solrcloud.update.delay");
   }
 
   public AbstractFullDistribZkTestBase() {
@@ -2198,16 +2192,6 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
         try {
           super.distribTearDown();
         } finally {
-          System.clearProperty(ZK_HOST);
-          System.clearProperty("collection");
-          System.clearProperty(ENABLE_UPDATE_LOG);
-          System.clearProperty(REMOVE_VERSION_FIELD);
-          System.clearProperty("solr.directoryFactory");
-          System.clearProperty(ZOOKEEPER_FORCE_SYNC);
-          System.clearProperty(
-              MockDirectoryFactory.SOLR_TESTS_ALLOW_READING_FILES_STILL_OPEN_FOR_WRITE);
-          System.clearProperty("zkHost");
-          System.clearProperty("numShards");
         }
       }
     }
@@ -2456,7 +2440,7 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
       int connectionTimeoutMillis,
       int socketTimeoutMillis) {
     RandomizingCloudSolrClientBuilder builder =
-        new RandomizingCloudSolrClientBuilder(Collections.singletonList(zkHost), Optional.empty());
+        new RandomizingCloudSolrClientBuilder(List.of(zkHost), Optional.empty());
     if (shardLeadersOnly) {
       builder.sendUpdatesOnlyToShardLeaders();
     } else {
@@ -3123,17 +3107,13 @@ public abstract class AbstractFullDistribZkTestBase extends BaseDistributedSearc
 
   protected void setupRestTestHarnesses() {
     for (final JettySolrRunner jetty : jettys) {
-      RestTestHarness harness =
-          new RestTestHarness(
-              () -> jetty.getBaseUrl().toString() + "/" + DEFAULT_TEST_COLLECTION_NAME);
-      restTestHarnesses.add(harness);
+      restTestHarnesses.add(jetty.getRestClient(DEFAULT_TEST_COLLECTION_NAME));
     }
   }
 
   protected void closeRestTestHarnesses() throws IOException {
-    for (RestTestHarness h : restTestHarnesses) {
-      h.close();
-    }
+    // note: prior to Solr 10.1, there was actual closing to do.
+    restTestHarnesses.clear();
   }
 
   protected RestTestHarness randomRestTestHarness() {
